--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3520,9 +3520,9 @@
         display: block;
     }
 
-    // #sectionPin {
-    //     display: none;
-    // }
+    #sectionPin {
+        display: none;
+    }
 
     .about-us-images {
         display: none;
