--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -690,18 +690,62 @@
         margin: 20px 0 0;
     }
 
+    .blog-details {
+        margin-top: 45%;
+        margin-bottom: 1%;
+    }
+
     .blog-details .container .content h1 {
-        font-size: 4em;
+        font-size: 2.3em;
         padding: 0px 5%;
         text-align: center;
         line-height: 1.4;
         font-family: 'NeueHaasDisplay-roman';
-        -webkit-transform: translateY(210px);
-        transform: translateY(210px);
         /* color: #000; */
-        text-shadow: 1px 1px 10px #0006;
-        margin-bottom: 60%;
+        text-shadow: none;
+        margin-bottom: 10%;
         mix-blend-mode: difference;
+    }
+
+    .blog-details .blog-flex {
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .overlap-text p {
+        -webkit-user-select: auto;
+        -moz-user-select: auto;
+        -ms-user-select: auto;
+        user-select: auto;
+        font-size: 3em;
+        font-family: 'NeueHaasDisplay-me';
+        margin-top: -45px;
+        color: #fff;
+        /* text-shadow: 1px 1px 11px #0000002e; */
+        text-shadow: 10px 10px 20px #00000029;
+        margin-left: -120px;
+    }
+
+    .blog-details .blog-flex .date,
+    .blog-details .blog-flex .ad,
+    .blog-details .blog-flex .comen {
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 20px;
+        align-items: inherit;
+    }
+
+    .blog-details .blog-flex .date p,
+    .blog-details .blog-flex .ad p,
+    .blog-details .blog-flex .comen p {
+        font-size: 15px;
+    }
+
+    .blog-details .blog-flex .date img,
+    .blog-details .blog-flex .ad img,
+    .blog-details .blog-flex .comen img {
+        width: 18px;
+        margin-right: 6px;
     }
 
     .blog-details .container .blog-prha {
@@ -713,6 +757,12 @@
         margin-top: 12%;
         margin-bottom: 4%;
         padding: 0 0%;
+    }
+
+    .blog-details .blog-flex .date p,
+    .blog-details .blog-flex .ad p,
+    .blog-details .blog-flex .comen p {
+        font-size: 15px;
     }
 
     .flex {
