--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -912,6 +912,7 @@ template {
   opacity: 0;
   color: white;
   font-size: 16px;
+  font-family: 'Ageo';
   line-height: 20px;
   text-align: center;
   letter-spacing: -0.01em;
