--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -4285,7 +4285,7 @@
             }
 
             .swiper-pagination-bullet {
-                background-color: fade(#000, 90%);
+                background-color: fade(rgb(255, 255, 255), 90%);
                 width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 16px));
                 height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 3px));
 
@@ -4323,7 +4323,7 @@
                                 17px;
                             font-size: 46px;
                             display: flex;
-                            color: #2b2b2b;
+                            color: #ffffff;
                             font-family: 'NeueHaasDisplay-me';
                             flex-wrap: wrap;
                             line-height: 1;
