--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -268,8 +268,7 @@
 
                 .icon-circles {
                     position: absolute;
-                    width: 2rem;
-                    height: 2rem;
+                    width: 2.5rem;
                     top: 48%;
                     left: 50%;
                     -webkit-transform: translate(-50%, -50%);
@@ -830,12 +829,12 @@
 
                 .icon-circles {
                     position: absolute;
-                    width: 2rem;
-                    height: 2rem;
+                    width: 2.5rem;
                     top: 48%;
                     left: 50%;
                     -webkit-transform: translate(-50%, -50%);
                     transform: translate(-50%, -50%);
+                    opacity: 0.7;
                     /* -webkit-filter: invert(1); */
                     /* filter: invert(1); */
                     /* -webkit-animation: float 3s ease-in-out infinite; */
