--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -2803,8 +2803,7 @@ header {
   }
   .hero-section .container_hero_content .chapt-icon .icon-circles {
     position: absolute;
-    width: 2rem;
-    height: 2rem;
+    width: 2.5rem;
     top: 48%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -3323,12 +3322,12 @@ header {
   }
   .hero-section .container_hero_content .chapt-icon .icon-circles {
     position: absolute;
-    width: 2rem;
-    height: 2rem;
+    width: 2.5rem;
     top: 48%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    opacity: 0.7;
     /* -webkit-filter: invert(1); */
     /* filter: invert(1); */
     /* -webkit-animation: float 3s ease-in-out infinite; */
@@ -4782,7 +4781,7 @@ header {
 }
 .about-us-content {
   width: 860px;
-  margin-top: 30px;
+  margin-top: 24%;
 }
 .align-items-start {
   -webkit-box-align: start;
@@ -7003,7 +7002,7 @@ header {
   }
   .about-us-content {
     margin-left: 111px;
-    margin-top: 1%;
+    margin-top: 23%;
     width: 940px;
   }
   .c-hm-us_top {
@@ -7024,7 +7023,7 @@ header {
   }
   .about-us-content {
     margin-left: 111px;
-    margin-top: 6%;
+    margin-top: 23%;
   }
   #about2 .big-h h1 {
     font-size: 9.8em;
@@ -7043,7 +7042,7 @@ header {
   }
   .about-us-content {
     margin-left: 30px;
-    margin-top: 4%;
+    margin-top: 23%;
   }
   .about-us-image {
     margin-top: 5%;
@@ -7069,7 +7068,7 @@ header {
   }
   .about-us-content {
     margin-left: 181px;
-    margin-top: 10%;
+    margin-top: 20%;
   }
   .c-hm-us_top {
     padding-top: 1.6em;
@@ -7092,7 +7091,7 @@ header {
   }
   .about-us-content {
     margin-left: 110px;
-    margin-top: 7%;
+    margin-top: 20%;
   }
   .c-hm-us_top {
     padding-top: 0.6em;
@@ -10009,6 +10008,9 @@ section.horizontal .animation-wrap.to-left {
   margin-top: 50px;
   opacity: 1;
 }
+#colori ul.is-inview li > div p {
+  color: #fff;
+}
 @media screen and (max-width: 1280px) {
   #work-sction .hd-rvl {
     font-size: 20px;
@@ -10080,6 +10082,98 @@ section.horizontal .animation-wrap.to-left {
     transform: translate(24%, -30%);
     width: auto;
     height: 157px;
+  }
+  #cover-pr > div#project p {
+    color: #fff;
+  }
+  #cover-pr {
+    padding-top: 0px;
+  }
+  #cover-pr > #cover_d {
+    position: relative;
+    width: 100vw;
+    overflow: hidden;
+    height: auto;
+    -webkit-transform: none !important;
+            transform: none !important;
+  }
+  #cover-pr > #cover_d > div {
+    max-width: 110vw;
+    max-height: 107.93vw;
+  }
+  #cover-pr > div#project {
+    margin-top: 50px;
+    padding: 80px 0px;
+  }
+  #project > div:first-child {
+    grid-column: 0.1;
+  }
+  #number_year {
+    display: none;
+  }
+  #image_ob {
+    position: relative;
+    height: 300px;
+    z-index: 5;
+    /* height: 300px; */
+  }
+  #image_ob > div {
+    grid-column: 0.1;
+    position: relative;
+  }
+  #image_ob > div > div {
+    position: absolute;
+    top: 1vh;
+    left: -30px;
+  }
+  .list__services__item h3 span {
+    color: var(--color-text-light);
+    font-size: calc(42px / 1.5);
+    display: inline-block;
+    position: relative;
+  }
+  .list__services li {
+    width: calc(100% / 1);
+  }
+  #portf {
+    padding: 75px 0px;
+    margin-bottom: 0%;
+  }
+  #marquee > div {
+    height: 40vh;
+    margin-top: 20%;
+  }
+  #marquee > div > div {
+    top: -6vh;
+  }
+  #marquee h2 {
+    width: 700vw;
+    font-size: 5.5em;
+  }
+  #marquee figure {
+    top: 15vh;
+  }
+  #colori ul {
+    display: block;
+    position: relative;
+    top: 0;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  #colori ul li > div > div {
+    padding: 30px;
+    width: 100vw;
+    padding-top: 89px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  #colori ul.is-inview li > div p {
+    font-size: 24px;
+    line-height: 1.3;
+    color: #fff;
+  }
+  #colori h2 {
+    display: none;
   }
 }
 /* contact */
