--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -440,6 +440,10 @@
     opacity: 1;
 }
 
+#colori ul.is-inview li>div p {
+    color: #fff;
+}
+
 @media screen and (max-width:1280px) {
     #work-sction .hd-rvl {
         font-size: 20px;
@@ -523,4 +527,121 @@
             height: 157px;
         }
     }
+
+    #cover-pr>div#project {
+        p {
+            color: #fff;
+        }
+    }
+
+    #cover-pr {
+        padding-top: 0px;
+    }
+
+    #cover-pr>#cover_d {
+        position: relative;
+        width: 100vw;
+        overflow: hidden;
+        height: auto;
+        transform: none !important;
+    }
+
+    #cover-pr>#cover_d>div {
+
+        max-width: 110vw;
+        max-height: 107.93vw;
+    }
+
+    #cover-pr>div#project {
+        margin-top: 50px;
+        padding: 80px 0px;
+    }
+
+    #project>div:first-child {
+        grid-column: 3 / 30;
+    }
+
+
+
+    #number_year {
+        display: none;
+    }
+
+    #image_ob {
+        position: relative;
+        height: 300px;
+        z-index: 5;
+        /* height: 300px; */
+    }
+
+    #image_ob>div {
+        grid-column: 3/ 30;
+        position: relative;
+    }
+
+    #image_ob>div>div {
+        position: absolute;
+        top: 1vh;
+        left: -30px;
+    }
+
+    .list__services__item h3 span {
+        color: var(--color-text-light);
+        font-size: calc(42px / 1.5);
+        display: inline-block;
+        position: relative;
+    }
+
+    .list__services li {
+        width: calc(100% / 1);
+    }
+
+    #portf {
+        padding: 75px 0px;
+        margin-bottom: 0%;
+    }
+
+    #marquee>div {
+        height: 40vh;
+        margin-top: 20%;
+    }
+
+    #marquee>div>div {
+        top: -6vh;
+    }
+
+    #marquee h2 {
+        width: 700vw;
+        font-size: 5.5em;
+    }
+
+    #marquee figure {
+        top: 15vh;
+    }
+
+    #colori ul {
+        display: block;
+        position: relative;
+        top: 0;
+        transform: translateY(0);
+    }
+
+    #colori ul li>div>div {
+        padding: 30px;
+        width: 100vw;
+        padding-top: 89px;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    #colori ul.is-inview li>div p {
+        font-size: 24px;
+        line-height: 1.3;
+        color: #fff;
+    }
+
+    #colori h2 {
+        display: none;
+    }
+
 }
