--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -448,6 +448,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
+        overflow: hidden;
     }
 
     .about-p {
@@ -3357,7 +3358,7 @@
     }
 
     .about-us-section {
-        padding: 90px 0 30px;
+        padding: 1% 0 30px;
         margin-bottom: 110px;
 
     }
@@ -3418,14 +3419,14 @@
     }
 
     .about-us-section {
-        padding: 90px 0 30px;
+        padding: 1% 0 30px;
         margin-bottom: 110px;
 
     }
 
     .about-us-content {
         margin-left: 30px;
-        margin-top: 23%;
+        margin-top: 40%;
     }
 
     .about-us-image {
@@ -3455,14 +3456,14 @@
     }
 
     .about-us-section {
-        padding: 90px 0 30px;
+        padding: 1% 0 30px;
         margin-bottom: 110px;
 
     }
 
     .about-us-content {
-        margin-left: 181px;
-        margin-top: 20%;
+        margin-left: 30px;
+        margin-top: 40%;
     }
 
     .c-hm-us_top {
@@ -3488,15 +3489,15 @@
     }
 
     .about-us-section {
-        padding: 15% 0 30px;
+        padding: 1% 0 30px;
         margin-bottom: 10px;
 
     }
 
     .about-us-content {
 
-        margin-left: 110px;
-        margin-top: 20%;
+        margin-left: 30px;
+        margin-top: 40%;
 
     }
 
