--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1589,6 +1589,7 @@
     padding: 10px 0px 0 18px;
     margin-top: -50px;
     font-family: 'NeueHaasDisplay-me';
+    position: absolute;
 }
 
 body.dark .ar-work-title,
@@ -1597,6 +1598,7 @@ body.dark .ar-work-title,
 }
 
 .ar-work-cat {
+    margin-top: 10px;
     font-size: 18px;
     letter-spacing: -0.02em;
     padding-left: 20px;
