--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -68,7 +68,7 @@ header {
 .menu-close {
 	position: absolute;
 	top: 30px;
-	right: 35px;
+	right: 39px;
 	font-size: 20px;
 	cursor: pointer;
 	z-index: 9;
@@ -453,8 +453,8 @@ header {
 	z-index: 10;
 }
 
-.navItem:hover .navItemLink {
-	// color: transparent;
+.navItemLink:hover .navItemLinkInner {
+	color: transparent;
 }
 
 @keyframes gradient {
@@ -710,6 +710,8 @@ header {
 	bottom: 0;
 	right: -4rem;
 	bottom: 13vh;
+	font-family: 'Ageo';
+	letter-spacing: 3px;
 }
 
 
@@ -951,14 +953,14 @@ header {
 @media only screen and (max-width:1680px) {
 	.nav-second {
 		right: -3rem;
-		bottom: 1vh;
+		bottom: 10vh;
 	}
 }
 
 @media only screen and (max-width:1440px) {
 	.nav-second {
 		right: -1rem;
-		bottom: 4vh;
+		bottom: 10vh;
 	}
 }
 
