--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -209,8 +209,28 @@
     text-transform: inherit;
     text-indent: inherit;
     text-decoration: none;
+
+    span {
+      background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+      background-clip: text;
+      background-size: 100% 500%;
+      -webkit-animation: gradient 2s ease infinite;
+      animation: gradient 2s ease infinite;
+      -webkit-animation-direction: alternate;
+      animation-direction: alternate;
+    }
   }
 
+  .en-btn_send:after {
+    background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+    background-size: 100% 500%;
+    -webkit-animation: gradient 2s ease infinite;
+    animation: gradient 2s ease infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
+  }
 
 }
 
@@ -1501,6 +1521,27 @@ section.horizontal .animation-wrap.to-left {
       text-transform: inherit;
       text-indent: inherit;
       text-decoration: none;
+
+      span {
+        background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        background-size: 100% 500%;
+        -webkit-animation: gradient 2s ease infinite;
+        animation: gradient 2s ease infinite;
+        -webkit-animation-direction: alternate;
+        animation-direction: alternate;
+      }
+    }
+
+    .en-btn_send:after {
+      background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      background-size: 100% 500%;
+      -webkit-animation: gradient 2s ease infinite;
+      animation: gradient 2s ease infinite;
+      -webkit-animation-direction: alternate;
+      animation-direction: alternate;
     }
   }
 }
@@ -1583,6 +1624,27 @@ section.horizontal .animation-wrap.to-left {
         text-transform: inherit;
         text-indent: inherit;
         text-decoration: none;
+
+        span {
+          background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+          -webkit-text-fill-color: transparent;
+          -webkit-background-clip: text;
+          background-clip: text;
+          background-size: 100% 500%;
+          -webkit-animation: gradient 2s ease infinite;
+          animation: gradient 2s ease infinite;
+          -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+        }
+      }
+
+      .en-btn_send:after {
+        background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+        background-size: 100% 500%;
+        -webkit-animation: gradient 2s ease infinite;
+        animation: gradient 2s ease infinite;
+        -webkit-animation-direction: alternate;
+        animation-direction: alternate;
       }
     }
   }
@@ -1590,6 +1652,12 @@ section.horizontal .animation-wrap.to-left {
   .services-s .flex-con .fle h3 {
     font-size: 3em;
     // opacity: 0;
+  }
+}
+
+.dark {
+  .marquees__part {
+    -webkit-text-stroke-color: #2b2b2b;
   }
 }
 
