--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -565,7 +565,562 @@
         }
     }
 
-    @media only screen and (min-device-width: 1200px) and (max-device-width: 1920px) {
+    // @media only screen and (max-device-width: 1920px) {
+    //     .hero-section .container_hero_content .small_heading {
+    //         position: relative;
+    //         left: 0;
+    //         right: 0;
+    //         top:
+    //             2.5vh;
+    //         bottom: auto;
+    //         font-size: 1.8em;
+    //         color: #ffffff;
+    //         font-weight: normal;
+    //         font-family: 'Ageo';
+    //         letter-spacing: 0.2em;
+    //     }
+    // }
+
+    @media only screen and (max-device-width: 1920px) {
+        .tablet_container .macbook_frame_2_evolves_mask_logo .macbook_frame_2_evolves_mask_logo_path {
+            transform: scale(8) translateX(-22vw) translateY(-37vh);
+        }
+
+
+        .container_hero {
+            z-index: 10;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
+            // background: #0b131a;
+
+        }
+
+        .container_word_change_t {
+            -webkit-backdrop-filter: blur(15px) !important;
+            backdrop-filter: blur(15px) !important;
+            display: none;
+            opacity: 0;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+            z-index: 12 !important;
+            background: #fff;
+            overflow: hidden;
+
+            .container_word_change_t_content {
+                -webkit-backdrop-filter: blur(15px) !important;
+                backdrop-filter: blur(15px) !important;
+                opacity: 1;
+                z-index: 13;
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                bottom: 0;
+                width: 100%;
+                text-align: center;
+                font-size: 5.6vw;
+            }
+
+            .we {
+                padding-right: 5px;
+                display: inline-block;
+                opacity: 0;
+                letter-spacing: 2px;
+                font-family: 'NeueHaasDisplay-me';
+            }
+
+            .make {
+                padding-right: 5px;
+                display: inline-block;
+                opacity: 0;
+                letter-spacing: 2px;
+                font-family: 'NeueHaasDisplay-me';
+            }
+
+            .digital {
+                padding-right: 5px;
+                display: inline-block;
+                opacity: 0;
+                letter-spacing: 2px;
+                font-family: 'NeueHaasDisplay-me';
+            }
+
+            .brand {
+                padding-right: 5px;
+                display: inline-block;
+                opacity: 0;
+                letter-spacing: 2px;
+                position: relative;
+                font-family: 'NeueHaasDisplay-me';
+            }
+
+            .experince {
+                padding-right: 5px;
+                display: inline-block;
+                opacity: 0;
+                letter-spacing: 2px;
+                position: relative;
+                font-family: 'NeueHaasDisplay-me';
+            }
+
+        }
+
+        .transition_to_lapi {
+            opacity: 0;
+            z-index: 59 !important;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            top: 0;
+            right: 0;
+            width: 100vw;
+            height: 100vh;
+            content: "";
+        }
+
+        // .transition_to_lapi {
+        //     background-color: #000000;
+        // }
+        .container_hero_content {
+            z-index: 11;
+            position: relative;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            z-index: 12;
+            height: 100%;
+            text-align: center;
+
+            #enigma-svg {
+                width: 59vw;
+                fill: currentColor;
+                overflow: visible;
+                z-index: 9;
+
+                .st0 {
+                    enable-background: new;
+                }
+
+                .st1 {
+                    fill: #808080;
+                }
+
+                .st2 {
+                    fill: #8B8B8B;
+                }
+
+                .st3 {
+                    fill: #939393;
+                }
+
+                .st4 {
+                    fill: #878787;
+                }
+
+                .st5 {
+                    fill: #AAAAAA;
+                }
+
+                .st6 {
+                    clip-path: url(#SVGID_2_);
+                }
+
+                .st7 {
+                    clip-path: url(#SVGID_6_);
+                }
+
+                .st8 {
+                    clip-path: url(#SVGID_10_);
+                }
+
+                .st9 {
+                    clip-path: url(#SVGID_14_);
+                }
+
+                .st10 {
+                    clip-path: url(#SVGID_18_);
+                }
+
+                .st11 {
+                    clip-path: url(#SVGID_22_);
+                }
+
+                .st12 {
+                    clip-path: url(#SVGID_26_);
+                }
+
+                .st13 {
+                    clip-path: url(#SVGID_30_);
+                }
+
+                .st14 {
+                    clip-path: url(#SVGID_34_);
+                }
+
+                .st15 {
+                    clip-path: url(#SVGID_38_);
+                }
+
+                .st16 {
+                    clip-path: url(#SVGID_42_);
+                }
+
+                .st17 {
+                    fill: #8C8C8C;
+                }
+
+                .st18 {
+                    clip-path: url(#SVGID_46_);
+                }
+
+                #e {
+                    transform: scale(5.9) translate(-83px, -118px);
+
+                }
+
+                #n {
+                    transform: scale(3) translate(-108px, -499px);
+                }
+
+                #i {
+                    transform: scale(2.5) translate(-170px, 452px);
+                }
+
+                #g {
+                    transform: scale(2.9) translate(-260px, -556px);
+                }
+
+                #m {
+                    transform: scale(2.5) translate(-240px, -590px);
+                }
+
+                #a {
+                    transform: scale(3.5) translate(-546px, 279px);
+                }
+            }
+
+            .small_heading {
+                position: relative;
+                left: 0;
+                right: 0;
+                top: 2.5vh;
+                bottom: auto;
+                font-size: 1.8em;
+                line-height: 1.5;
+                color: #ffffff;
+                font-weight: normal;
+                font-family: 'Ageo';
+                letter-spacing: 0.20em;
+
+            }
+
+            .chapt-icon {
+                position: absolute;
+                display: block;
+                width: 12%;
+                cursor: pointer;
+                bottom: 30px;
+                right: 20px;
+
+                .scroll-circle {
+                    opacity: 0;
+                    visibility: inherit;
+                }
+
+                .icon-circles {
+                    position: absolute;
+                    width: 2.5rem;
+                    top: 48%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                    opacity: 0.7;
+                    /* -webkit-filter: invert(1); */
+                    /* filter: invert(1); */
+                    /* -webkit-animation: float 3s ease-in-out infinite; */
+                    /* animation: float 3s ease-in-out infinite; */
+                }
+
+
+                @keyframes float {
+                    0% {
+
+                        transform: translatey(-23px);
+                    }
+
+                    50% {
+
+                        transform: translatey(-12px);
+                    }
+
+                    100% {
+                        transform: translatey(-23px);
+                    }
+                }
+
+                .scroll-icon {
+                    transition: 0.9s all ease-in;
+                    fill: #EAEAEA;
+                    transition: all 350ms cubic-bezier(0.165, 0.84, 0.44, 1);
+                    animation: circleSpin 8s linear infinite;
+                }
+
+                .scroll-arrow {
+                    overflow: hidden;
+                }
+
+                .scroll-arrow svg {
+                    fill: #EAEAEA;
+                    height: 148px;
+                    margin-top: 30px;
+                    transform: translate(0px, -210px);
+                    opacity: 0;
+                    transition: 0.3s all ease-in;
+                }
+            }
+        }
+
+        .container_lapi {
+            display: none;
+            z-index: 60;
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+
+            .container_lapi_content {
+                width: inherit;
+                height: inherit;
+                position: relative;
+
+                .enigma_bg_container_2 {
+                    width: 100vw;
+                    height: 100vh;
+                    left: 0;
+                    right: 0;
+                    top: 0;
+                    bottom: 0;
+                    position: absolute;
+                    z-index: -1 !important;
+
+                    .enigma_bg_2 {
+                        position: relative;
+                        top: 50% !important;
+                        transform: translateY(-50%) !important;
+                        width: 100%;
+                        text-align: center;
+                        font-family: 'NeueHaasDisplay-me';
+
+                        font-size: 25vw;
+                        font-weight: 500;
+
+                        img {
+                            width: 100%;
+                        }
+                    }
+
+                    .enigma_bg_2 {
+                        color: #8e8e93;
+                    }
+                }
+
+                .enigma_bg_container {
+                    -webkit-backdrop-filter: blur(15px);
+                    backdrop-filter: blur(15px);
+                    width: 100vw;
+                    height: 100vh;
+                    left: 0;
+                    right: 0;
+                    top: 0;
+                    bottom: 0;
+                    position: absolute;
+                    z-index: 81 !important;
+
+                    .enigma_bg {
+                        position: relative;
+                        top: 50% !important;
+                        transform: translateY(-50%) !important;
+                        width: 100%;
+                        text-align: center;
+                        font-family: 'NeueHaasDisplay-roman';
+                        letter-spacing: 3px;
+                        font-size: 6vw;
+                        font-weight: 600;
+                    }
+
+                    .enigma_bg {
+                        color: #fff;
+                    }
+                }
+
+                .container_lapi_content_together {
+                    position: relative;
+                    width: inherit;
+                    height: inherit;
+
+                    .container_lapi_content_inner {
+                        width: auto;
+                        height: auto;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translateY(-50%) translateX(-50%);
+
+                        .lapi_div {
+                            position: relative;
+                            z-index: 70 !important;
+                            width: auto;
+                            height: 80vh;
+
+                            .macbook_pro {
+                                content: url('/assets/resources/img/MacBook_Pro.png');
+                                position: relative;
+                                top: auto;
+                                bottom: 0;
+                                left: 0;
+                                right: auto;
+                                overflow: hidden;
+                                width: auto;
+                                height: 100%;
+                                z-index: 80 !important;
+                            }
+
+                            .macbook_frame {
+                                z-index: 74 !important;
+                                opacity: 1;
+                                position: absolute;
+                                display: block;
+                                margin: auto;
+                                top: -109px;
+                                bottom: 0;
+                                left: 10px;
+                                right: 0;
+                                width: calc(80%);
+                                height: calc(73%);
+                                overflow: hidden;
+                                background: #000;
+                                border-radius: 0;
+
+                                video {
+                                    object-fit: cover;
+                                }
+
+                                .macbook_frame_content_upper {
+                                    width: 100%;
+                                    height: auto;
+                                    position: absolute;
+                                    top: 1vh;
+                                    left: 3%;
+                                    transform: translateX(0);
+                                    overflow: hidden;
+                                    z-index: 67;
+
+                                    .macbook_frame_logo {
+                                        position: absolute;
+                                        left: 0;
+                                        right: 0;
+                                        width: 55vh;
+                                        margin: auto;
+                                        top: 15px;
+                                        z-index: -1;
+                                        opacity: .2;
+                                        filter: invert(1) blur(5px);
+                                    }
+
+                                    .macbook_frame_heading {
+                                        position: relative;
+                                        font-family: 'NeueHaasDisplay-Mediu';
+                                        color: #9d9d9d;
+                                        letter-spacing: 2px;
+                                        text-align: left;
+                                        font-size: 31px;
+                                        line-height: 69px;
+                                        text-transform: capitalize;
+
+                                        p {
+                                            font-family: 'NeueHaasDisplay-Mediu';
+                                        }
+
+                                        span {
+                                            font-style: italic;
+                                            color: #fff;
+                                            margin-right: 5px;
+                                            font-family: 'NeueHaasDisplay-blod';
+                                        }
+                                    }
+                                }
+
+                                .macbook_frame_one {
+                                    width: 85%;
+                                    height: auto;
+                                    position: absolute;
+                                    bottom: 2vh;
+                                    left: 50%;
+                                    transform: translateX(-50%);
+                                    border-radius: 25px;
+                                    overflow: hidden;
+                                    z-index: 67;
+                                    -webkit-backdrop-filter: blur(20px);
+                                    backdrop-filter: blur(20px);
+                                    background-color: rgba(0, 0, 0, .4);
+                                    content: "";
+
+                                    .macbook_frame_one_content {
+                                        padding-top: 15px;
+                                        padding-left: 15px;
+                                        padding-right: 15px;
+                                        padding-bottom: 15px;
+
+                                        svg {
+                                            width: 5vh;
+                                            padding-bottom: 5px;
+                                        }
+
+                                        .macbook_frame_one_heading {
+                                            position: relative;
+                                            font-family: 'NeueHaasDisplay-Mediu';
+                                            font-size: 2.5vh;
+                                            line-height: 1.5;
+                                            color: #fff;
+                                        }
+
+                                        .macbook_frame_one_text {
+                                            padding-top: 5px;
+                                            position: relative;
+                                            font-family: 'NeueHaasDisplay-Mediu';
+                                            font-size: 1.75vh;
+                                            line-height: 1.5;
+                                            color: #8e8e93;
+                                        }
+                                    }
+                                }
+                            }
+
+                        }
+
+                    }
+                }
+            }
+
+        }
+    }
+
+    @media only screen and (max-device-width: 1440px) {
         .tablet_container .macbook_frame_2_evolves_mask_logo .macbook_frame_2_evolves_mask_logo_path {
             transform: scale(8) translateX(-22vw) translateY(-37vh);
         }
