--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -400,17 +400,27 @@
     h1 {
       font-size: 10em;
       font-family: 'NeueHaasDisplay-me';
-      overflow: hidden;
+      perspective: 600px;
 
       // text-shadow: 1px 1px 10px rgba(248, 25, 25, 0.212);
-      span {
+      .header_title_line {
+        // display: block;
+        // color: transparent;
+        // background-image: radial-gradient(farthest-corner at center 0px, #919ccd 0%, black 100%);
+        // -webkit-background-clip: text;
+        // background-clip: text;
+        // transform-origin: center;
+        // background-size: 200% auto;
+        // animation: gradient-animation 3s linear infinite;
+        // transition: opacity 0s cubic-bezier(.215, .61, .355, 1), transform 0s cubic-bezier(.215, .61, .355, 1);
         display: block;
-        color: transparent;
-        background-image: radial-gradient(farthest-corner at center 0px, #919ccd 0%, black 100%);
-        -webkit-background-clip: text;
-        background-clip: text;
-        background-size: 200% auto;
-        animation: gradient-animation 3s linear infinite;
+        transform: none;
+        transform-origin: center top;
+        transform-style: preserve-3d;
+
+        span {
+          display: inline-block;
+        }
       }
 
       @-webkit-keyframes gradient-animation {
