--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -587,6 +587,12 @@ button:hover .button-text {
     scroll-behavior: smooth;
   }
 }
+@media screen and (min-width: 1000px) and (max-width: 2200px) {
+  html,
+  body {
+    overscroll-behavior-x: none;
+  }
+}
 .container {
   width: auto;
   margin: auto;
@@ -6860,12 +6866,12 @@ header {
 .is-inview .text_anim span {
   -webkit-transform: translateY(0) skewY(0deg);
           transform: translateY(0) skewY(0deg);
-  -webkit-transition: -webkit-transform 1.1s ease-out;
-  transition: -webkit-transform 1.1s ease-out;
-  transition: transform 1.1s ease-out;
-  transition: transform 1.1s ease-out, -webkit-transform 1.1s ease-out;
-  -webkit-transition-delay: 0.8s;
-          transition-delay: 0.8s;
+  -webkit-transition: -webkit-transform 0.8s ease-out;
+  transition: -webkit-transform 0.8s ease-out;
+  transition: transform 0.8s ease-out;
+  transition: transform 0.8s ease-out, -webkit-transform 0.8s ease-out;
+  -webkit-transition-delay: 0.6s;
+          transition-delay: 0.6s;
 }
 .is-inview .text_anim.spline_p div:nth-child(2) span {
   -webkit-transition-delay: 0.45s;
@@ -9332,12 +9338,16 @@ header {
 .scroll-sec2 .back-text {
   position: absolute;
   top: -29px;
-  right: 0;
+  right: inherit;
   font-family: 'NeueHaasDisplay-me';
   z-index: 0;
 }
 .scroll-sec2 .back-text h1 {
-  font-size: 7.17em;
+  -webkit-transform: translateX(192vw);
+  transform: translateX(192vw);
+  width: 250vw;
+  font-size: 9em;
+  font-family: 'NeueHaasDisplay-me';
   color: #7575750a;
 }
 .scroll-sec2 .container {
@@ -9781,7 +9791,7 @@ section.horizontal .animation-wrap.to-left {
     text-decoration: none;
   }
   .services-s .content-p .en-form-submit .en-btn_send span {
-    background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+    background-image: linear-gradient(49deg, #1e0253 0, #820060 30%, #c20027 58%, #1e0253 95%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
@@ -9792,7 +9802,7 @@ section.horizontal .animation-wrap.to-left {
     animation-direction: alternate;
   }
   .services-s .content-p .en-form-submit .en-btn_send:after {
-    background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+    background-image: linear-gradient(49deg, #1e0253 0, #820060 30%, #c20027 58%, #1e0253 95%);
     background-size: 100% 500%;
     -webkit-animation: gradient 2s ease infinite;
     animation: gradient 2s ease infinite;
