--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2568,8 +2568,8 @@
 
 .is-inview .text_anim span {
     transform: translateY(0) skewY(0deg);
-    transition: transform 1.1s ease-out;
-    transition-delay: .8s;
+    transition: transform .8s ease-out;
+    transition-delay: .6s;
 }
 
 .is-inview .text_anim.spline_p div:nth-child(2) span {
