--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -2,13 +2,20 @@
 // Description: All styles which are used globally like on every page 
 // Used by: Page.less
 // Dependencies:
+//defaults write com.google.Chrome.plist AppleEnableSwipeNavigateWithScrolls -bool FALSE
+//
 // ------------------------------------------------------------
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
   }
 }
-
+@media screen and (min-width:1000px) and (max-width:2200px){
+html,
+body {
+  overscroll-behavior-x: none;
+}
+}
 .container {
   width: auto;
   margin: auto;
