--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -10,12 +10,15 @@
     scroll-behavior: smooth;
   }
 }
-@media screen and (min-width:1000px) and (max-width:2200px){
-html,
-body {
-  overscroll-behavior-x: none;
+
+@media screen and (min-width:1000px) and (max-width:2200px) {
+
+  html,
+  body {
+    overscroll-behavior-x: none;
+  }
 }
-}
+
 .container {
   width: auto;
   margin: auto;
@@ -718,9 +721,9 @@ template {
 }
 
 .-color-white .ht-cursor-text {
-  font-size: 1.8em !important;
+  // font-size: 1.8em !important;
   text-transform: uppercase;
-  line-height: 31px;
+  // line-height: 31px;
   letter-spacing: 1px;
 }
 
