--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -201,7 +201,7 @@
     border: 0;
     border-radius: 0;
     outline: 0 !important;
-    font-family: 'NeueHaasDisplay-bol';
+    font-family: 'Ageo';
     font-size: 0.9em;
     letter-spacing: 1px;
     line-height: inherit;
@@ -211,7 +211,7 @@
     text-decoration: none;
 
     span {
-      background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
       -webkit-text-fill-color: transparent;
       -webkit-background-clip: text;
       background-clip: text;
@@ -224,7 +224,7 @@
   }
 
   .en-btn_send:after {
-    background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+    background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
     background-size: 100% 500%;
     -webkit-animation: gradient 2s ease infinite;
     animation: gradient 2s ease infinite;
@@ -520,8 +520,9 @@
         text-transform: inherit;
         text-align: justify;
 
-        span {
+        .qou {
           position: absolute;
+          display: contents;
           left: -40px;
 
           img {
@@ -659,7 +660,7 @@
     text-align: left;
     color: #2B2B2B;
 
-    span {
+    .grd {
       font-family: 'NeueHaasDisplay-me';
       font-size: 1.2em;
       color: #fff;
@@ -1162,11 +1163,11 @@
       font-size: 27px;
       padding-right: 11%;
       color: #000000;
-      line-height: 1.8;
+      line-height: 1.7;
       margin-bottom: 3%;
       margin-top: 10%;
-      letter-spacing: 4px;
-      font-family: 'NeueHaasDisplay-me';
+      letter-spacing: 1px;
+      font-family: 'Ageo-SemiBold';
       position: relative;
 
       img {
@@ -1447,13 +1448,16 @@ section.horizontal .animation-wrap {
   min-height: 100vh;
   width: 100%;
   position: relative;
-  display: grid;
+  // display: grid;
+  display: none;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 2rem;
   padding: 50px 10vw;
   margin: auto;
   place-items: center;
 }
+
+
 
 section.horizontal .animation-wrap.to-right {
   counter-reset: item;
@@ -1569,6 +1573,10 @@ section.horizontal .animation-wrap.to-left {
       width: 500px;
     }
   }
+
+  .get-in .flex-con .right::after {
+    height: 367px;
+  }
 }
 
 @media screen and (max-width:1680px) {
@@ -1585,11 +1593,19 @@ section.horizontal .animation-wrap.to-left {
     font-size: 4em;
     // opacity: 0;
   }
+
+  .get-in .flex-con .right::after {
+    height: 300px;
+  }
 }
 
 @media screen and (max-width:1440px) {
   .works__hero__line {
     line-height: 1.06;
+  }
+
+  .get-in .flex-con .right::after {
+    height: 276px;
   }
 }
 
@@ -1598,6 +1614,11 @@ section.horizontal .animation-wrap.to-left {
     font-size: 11.4em;
 
   }
+
+  .get-in .flex-con .right::after {
+    height: 276px;
+    height: 246px;
+  }
 }
 
 @media screen and (max-width:1280px) {
@@ -1605,6 +1626,10 @@ section.horizontal .animation-wrap.to-left {
   .works__hero__line {
     font-size: 11em;
     line-height: 0.9;
+  }
+
+  .get-in .flex-con .right::after {
+    height: 246px;
   }
 
   .services-s .image {
