--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -405,14 +405,14 @@
       // text-shadow: 1px 1px 10px rgba(248, 25, 25, 0.212);
       .header_title_line {
         // display: block;
-        // color: transparent;
-        // background-image: radial-gradient(farthest-corner at center 0px, #919ccd 0%, black 100%);
-        // -webkit-background-clip: text;
-        // background-clip: text;
-        // transform-origin: center;
-        // background-size: 200% auto;
-        // animation: gradient-animation 3s linear infinite;
-        // transition: opacity 0s cubic-bezier(.215, .61, .355, 1), transform 0s cubic-bezier(.215, .61, .355, 1);
+        color: transparent;
+        background-image: radial-gradient(farthest-corner at center 0px, #919ccd 0%, black 100%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        transform-origin: center;
+        background-size: 200% auto;
+        animation: gradient-animation 3s linear infinite;
+        transition: opacity 0s cubic-bezier(.215, .61, .355, 1), transform 0s cubic-bezier(.215, .61, .355, 1);
         display: block;
         transform: none;
         transform-origin: center top;
